--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,7 @@ doc/
 
 # Vagrant artifacts
 ubuntu-*-console.log
+
+# Managed by yaml/docs/prepare-docs.mjs
+/source/includes/
+/source/index.html.md
